--- a/style.css
+++ b/style.css
@@ -10,7 +10,10 @@ h4 {
     color:rgb(224, 83, 32);
 }
 
-#container {
+.main-container {
+    max-width: 400px;
+}
+.ratings-container {
     background-color: #101b23;
     font-family: 'Open Sans', sans-serif;
     font-weight: bold;
@@ -24,7 +27,7 @@ h4 {
     font-size: 10px;
 }
 
-.thankyou-container {
+.thank-you-container {
     background-color: #101b23;
     font-family: 'Open Sans', sans-serif;
     font-weight: bold;
@@ -41,13 +44,13 @@ h4 {
     margin: 350px 550px 350px;
     font-size: 10px;
     position: relative;
-    right: 600px;
-    bottom: 300px;   
+    left: 5px;
+    bottom: 340px;   
 }
 
-/* .thankyou-container {
+.hide {
     display: none;
-} */
+}
 
 button {
     border: none;
